# geospatial_dvf

./: .env.example  .gitignore  README.md  aggregate_prices.py  convert_to_pmtiles.py  download_data.py  generate_parcels.py  generate_top_cities.py  join_geometries.py  pipeline.py  process_dvf.py  pyproject.toml  run_map.py  upload_to_r2.py
map/: index.html
scripts/: setup.sh
tests/: test_convert_to_pmtiles.py  test_download_data.py  test_dvf_aggregation.py  test_generate_parcels.py  test_join_geometries.py  test_process_dvf_final.py  test_process_dvf_integration.py
tests/fixtures/: dvf_sample_1000.csv
utils/: __init__.py  logger.py
